<resources>
    <string name="app_name">ezwayapp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_login_ezway_fragment">Área do usuário</string>
    <string name="welcome_ezway">Olá usuário</string>
    <string name="or_text">Ou</string>
    <string name="geo_permition">Precisamos solicitar o acesso à sua Geolocalização, para que você possa estar utilizando nossos recursos.</string>
    <string name="welcome_frase">Olá usuário, seja bem-vindo ao ezway. Nosso propósito é facilitar o seu caminho de maneira fácil e eficiente. Vamos começar?</string>
    <string name="start_next">Começar</string>
    <string name="btn_login">Fazer login</string>
    <string name="btn_maps">Acessar maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_sign_in_with_email_and_password">
        SignInWithEmailAndPasswordActivity
    </string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm_password">Confirmar Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_new_account">Criar nova conta</string>
    <string name="action_sign_up">Registrar</string>
    <string name="action_sign_in_google">Acessar com Google</string>
    <string name="action_sign_in_facebook">Acessar com Facebook</string>
    <string name="call_register">Criar nova conta</string>
    <string name="call_forgot_password">Esqueceu a senha?</string>
    <string name="turn_back">Voltar</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ezWay_logo">Logo EzWay</string>
    <string name="logo_description">Logo ezway</string>
    <string name="title_activity_main">EzWay Welcome</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_auth_maps">Auth Maps</string>
    <string name="forgot_password_title">Insira seu e-mail no campo abaixo para iniciar o processo de recuperação de senha</string>
    <string name="request_password_recovery">Solicitar recuperação de senha</string>
    <string name="create_new_account_title">Criar nova conta</string>
    <string name="a_woman_consunting_a_map">Ilustração de uma mulher consultando um mapa</string>
</resources>
